[gd_scene load_steps=13 format=3 uid="uid://beqlo31ekacqq"]

[ext_resource type="Texture2D" uid="uid://dwn06sgikss5b" path="res://assets/environnment/sky.png" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://jwn73cel5sbo" path="res://scenes/main.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://de375hd6bq5or" path="res://assets/environnment/road.png" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://duika4wlt4am0" path="res://scenes/player.tscn" id="3_sugp2"]
[ext_resource type="Script" uid="uid://bxr1d26dfxws7" path="res://scenes/death_zone.gd" id="4_tbgi4"]
[ext_resource type="AudioStream" uid="uid://c8pt1oeemc1rn" path="res://assets/Kérosène_loop.mp3" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://bjn53sc8q6858" path="res://assets/entities/gerican/image0004.png" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cca001veh6fsc" path="res://scenes/ennemy_spawner.tscn" id="8_85g3d"]
[ext_resource type="PackedScene" uid="uid://cqgohl4jhsgrk" path="res://scenes/gerican.tscn" id="9_choun"]
[ext_resource type="PackedScene" uid="uid://bwiwc8ppmg5vb" path="res://scenes/bird.tscn" id="10_choun"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tbgi4"]

[sub_resource type="LabelSettings" id="LabelSettings_o6xl0"]
font_size = 32

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-3, -14)
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2160, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 2
position = Vector2(1086, 308)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_0wfyh")
region_enabled = true
region_rect = Rect2(0, 0, 3600, 1000)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_mirroring = Vector2(360, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(719, 587)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_sugp2")
region_enabled = true
region_rect = Rect2(0, 0, 7200, 600)

[node name="Player" parent="." instance=ExtResource("3_sugp2")]
position = Vector2(100, 200)
scale = Vector2(0.5, 0.5)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="DeathZone" type="Area2D" parent="."]
script = ExtResource("4_tbgi4")

[node name="Rectangle" type="CollisionShape2D" parent="DeathZone"]
unique_name_in_owner = true
position = Vector2(4, 547)
shape = SubResource("WorldBoundaryShape2D_tbgi4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tefeu")
autoplay = true
playback_type = 1
parameters/looping = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("7_o6xl0")
expand_mode = 2

[node name="FuelBar" type="ProgressBar" parent="HUD/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="HUD/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="MeterScore" type="Label" parent="HUD/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "0 m"
label_settings = SubResource("LabelSettings_o6xl0")

[node name="FuelSpawner" parent="." instance=ExtResource("8_85g3d")]
enemy_scene = ExtResource("9_choun")

[node name="EnnemySpawner" parent="." instance=ExtResource("8_85g3d")]
unique_name_in_owner = true
enemy_scene = ExtResource("10_choun")
min_spawn_time = 2.0
max_spawn_time = 6.0

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
